# WSL2UbuntuSuddenShutDownPrevention

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/toolchains/: llvm-mingw-x86_64.cmake
docs/: architecture.md  forensics_gap_analysis.md  testing_report.md
scripts/ubuntu/: build.sh  deploy.sh  install_dependencies.sh
scripts/windows/: build.ps1  deploy.ps1  install_dependencies.ps1
shared/: CMakeLists.txt
shared/include/: crypto.hpp  event.hpp  heuristic_analyzer.hpp  ipc.hpp  logger.hpp  ring_buffer.hpp
shared/src/: crypto.cpp  event.cpp  heuristic_analyzer.cpp  ipc.cpp  logger.cpp
tests/: CMakeLists.txt  heuristic_analyzer_test.cpp
tools/: CMakeLists.txt
tools/master_report/: CMakeLists.txt  main.cpp
ubuntu/: CMakeLists.txt
ubuntu/config/: sources.yaml
ubuntu/include/: ipc_bridge.hpp  monitor_daemon.hpp
ubuntu/src/: ipc_bridge.cpp  main.cpp  monitor_daemon.cpp
ubuntu/systemd/: wsl-monitor.service
windows/: CMakeLists.txt
windows/config/: channels.json
windows/include/: event_collector.hpp  event_log_collector.hpp  handle_utils.hpp  ipc_bridge.hpp  power_collector.hpp  process_collector.hpp  security_collector.hpp  service_health_collector.hpp  wer_collector.hpp  windows_service.hpp  wsl_diagnostic_collector.hpp
windows/src/: event_collector.cpp  event_log_collector.cpp  ipc_bridge.cpp  main.cpp  power_collector.cpp  process_collector.cpp  security_collector.cpp  service_health_collector.cpp  wer_collector.cpp  windows_service.cpp  wsl_diagnostic_collector.cpp
